# CIS-5300-Homework-2

./: .gitignore  constants.py  pos_tagger.py  pos_tagger_old.py  pos_tagger_unknown.py  pyproject.toml  requirements.txt  utils.py
