[tool.poetry]
name = "cis-5300-homework-2"
version = "0.1.0"
description = ""
authors = ["nlao1 <nlao@seas.upenn.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "7.20.0"
pandas = "1.2.1" 
torch = "1.7.1" 
numpy = "1.20.0" 
scipy = "1.6.0" 
scikit-learn = "0.24.1" 
seaborn = "0.11.2" 
matplotlib = "3.5.0" 
tqdm = "4.66.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
